# MarchMadness

./: .replit  MarchMadness.cabal  README.md  scraper.py  stack.yaml  stats.csv
src/: Bracket.hs
test/: Spec.hs
